--- a/Prospective/Roofinger Template Designs/Ayrshire Fencing Group/src/pages/project/[slug].astro
+++ b/Prospective/Roofinger Template Designs/Ayrshire Fencing Group/src/pages/project/[slug].astro
@@ -9,10 +9,12 @@ import { Footer } from "@/sections/Footer";
 
 export async function getStaticPaths() {
   return [
-    { params: { slug: "new-roof-with-fascias-soffits" } },
-    { params: { slug: "new-roughcast-job-completed" } },
-    { params: { slug: "complete-roof-renovation" } },
-    { params: { slug: "roof-roughcast-exterior-upgrade" } },
+    { params: { slug: "fencing-project-one" } },
+    { params: { slug: "fencing-project-two" } },
+    { params: { slug: "fencing-project-three" } },
+    { params: { slug: "decking-project-four" } },
+    { params: { slug: "decking-project-five" } },
+    { params: { slug: "decking-project-six" } },
   ];
 }
 
