--- a/Prospective/Roofinger Template Designs/Ayrshire Fencing Group/src/pages/index.astro
+++ b/Prospective/Roofinger Template Designs/Ayrshire Fencing Group/src/pages/index.astro
@@ -12,7 +12,7 @@ import { CTASection } from "@/sections/Footer/components/CTASection";
 import { Footer } from "@/sections/Footer";
 ---
 
-<BaseLayout title="Ayrshire Fencing Group - Quality Fencing & Decking Services Across Ayrshire">
+<BaseLayout title="Fence Contractor Ayrshire | Ayrshire Fencing Group - Quality Fencing & Decking Services">
     <div class="text-neutral-600 text-lg not-italic normal-nums font-medium accent-auto bg-[#323232] box-border caret-transparent block tracking-[normal] leading-[27px] list-outside list-disc min-h-full pointer-events-auto text-start indent-[0px] normal-case visible border-separate font-manrope">
       <Header client:only="react" />
       <Hero client:only="react" />
