--- a/Prospective/Roofinger Template Designs/Ayrshire Fencing Group/src/pages/index.astro
+++ b/Prospective/Roofinger Template Designs/Ayrshire Fencing Group/src/pages/index.astro
@@ -4,6 +4,8 @@ import { Header } from "@/sections/Header";
 import { Hero } from "@/sections/Hero";
 import { ExperienceSection } from "@/sections/ExperienceSection";
 import { ServicesSection } from "@/sections/ServicesSection";
+import { HomepageContentSection } from "@/sections/HomepageContentSection";
+import { ServiceAreasSection } from "@/sections/ServiceAreasSection";
 import { ProjectsSection } from "@/sections/ProjectsSection";
 import { ReviewsSection } from "@/sections/ReviewsSection";
 import { VideoSection } from "@/sections/VideoSection";
@@ -26,6 +28,9 @@ import { Footer } from "@/sections/Footer";
       <ReviewsSection client:load />
       <VideoSection client:load />
       <FAQSection client:load />
+      <CTASection client:load />
+      <HomepageContentSection client:load />
+      <ServiceAreasSection client:load />
       <CTASection client:load />
       <Footer client:load />
     </div>
